// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ng add '@koobiq/components' should add missing dependencies to 'package.json': after running schematics 1`] = `
{
  "@angular/animations": "^22.1.0",
  "@angular/cdk": "^0.0.0",
  "@angular/common": "^22.1.0",
  "@angular/compiler": "^22.1.0",
  "@angular/core": "^22.1.0",
  "@angular/forms": "^22.1.0",
  "@angular/platform-browser": "^22.1.0",
  "@angular/router": "^22.1.0",
  "@koobiq/angular-luxon-adapter": "^0.0.0",
  "@koobiq/date-adapter": "^0.0.0",
  "@koobiq/date-formatter": "^0.0.0",
  "@koobiq/design-tokens": "^0.0.0",
  "@koobiq/icons": "^0.0.0",
  "@koobiq/luxon-date-adapter": "^0.0.0",
  "luxon": "^0.0.0",
  "overlayscrollbars": "^0.0.0",
  "rxjs": "~7.8.0",
  "tslib": "^2.3.0",
}
`;

exports[`ng add '@koobiq/components' should add missing dependencies to 'package.json': before running schematics 1`] = `
{
  "@angular/common": "^22.1.0",
  "@angular/compiler": "^22.1.0",
  "@angular/core": "^22.1.0",
  "@angular/forms": "^22.1.0",
  "@angular/platform-browser": "^22.1.0",
  "@angular/router": "^22.1.0",
  "rxjs": "~7.8.0",
  "tslib": "^2.3.0",
}
`;
